0.10

- Optimizations to cache frequently used (and rarely changing) method
  return values as attributes.

- As a result of the above, several methods that used to return arrays
  now return array references. These are Fey::FK->column_pairs(),
  Fey::Table->candidate_keys(), and Fey::Table->primary_key(), and
  Fey::Literal::Function->args().


0.09    2008-07-31

- If a where clause had a subgroup after a comparison (like "WHERE x =
  1 AND ( y = 2 )", it didn't properly add the needed "AND".


0.08    2008-07-02

- The fix for "SELECT statements with multiple joins generated bogus
  SQL (a spurious comma separating JOIN clauses)" still generated
  bogus SQL in some cases.


0.07    2008-06-26

- SELECT statements with multiple joins generated bogus SQL (a
  spurious comma separating JOIN clauses).


0.06    2008-03-06

- Allow a Fey::Column object to have a column with precision but no
  length, since Postgres allows this.


0.05    2008-02-20

- Some small tweaks to take advantage of recent Moose changes.

- Added Fey::FK->pretty_print().

- Some internal changes for the benefit of Fey::ORM.


0.04    2008-02-13

- Some SQL methods (order_by() and limit()) did not return the object
  on which they were called, so they broke method chaining.


0.03    2008-02-06

- Renamed the distro from Fey-Core to just Fey.

- Added automatic use of placeholders to Fey::SQL. Now when you pass
  literal values, the default is to convert them to placeholders. The
  values can be retrieved from the new
  bind_params(). method. Suggested by Daisuke Maki.


0.02    2008-02-05

- Moved Fey::Test to its own distro, and made it a build prereq.


0.01    2008-02-02

- First release upon an unsuspecting world.