@@ -4,7 +4,7 @@ use warnings;
 use lib 't/lib';
 
 use Fey::Test;
-use Test::More tests => 17;
+use Test::More tests => 20;
 
 use Fey::Placeholder;
 use Fey::SQL;
@@ -179,4 +179,54 @@ $s->table('User')->add_column($size);
     $q->values( size => 1 );
     is( $q->sql($dbh), q{INSERT INTO "User" ("size") VALUES (1)},
         'sql() for full insert clause' );
+}
+
+{
+    package Num;
+
+    use overload '0+' => sub { ${ $_[0] } };
+
+    sub new
+    {
+        my $num = $_[1];
+        return bless \$num, __PACKAGE__;
+    }
+}
+
+{
+    package Str;
+
+    use overload q{""} => sub { ${ $_[0] } };
+
+    sub new
+    {
+        my $str = $_[1];
+        return bless \$str, __PACKAGE__;
+    }
+}
+
+{
+    my $q = Fey::SQL->new_insert( auto_placeholders => 1 )->insert();
+
+    $q->into( $s->table('User')->column('user_id'),
+              $s->table('User')->column('username') );
+
+    $q->values( user_id => Num->new(42), username => Str->new('Bubba') );
+
+    is( $q->_values_clause($dbh), q{VALUES (?, ?)},
+        '_values_clause() for two columns column with overloaded objects and auto placeholders' );
+    is_deeply( [ $q->bind_params() ], [ 42, 'Bubba' ],
+               'bind params with overloaded object' );
+}
+
+{
+    my $q = Fey::SQL->new_insert( auto_placeholders => 0 )->insert();
+
+    $q->into( $s->table('User')->column('user_id'),
+              $s->table('User')->column('username') );
+
+    $q->values( user_id => Num->new(42), username => Str->new('Bubba') );
+
+    is( $q->_values_clause($dbh), q{VALUES (42, 'Bubba')},
+        '_values_clause() for two columns column with overloaded object, no placeholders' );
 }
